--- a/SqApp/wwwroot/css/const.css
+++ b/SqApp/wwwroot/css/const.css
@@ -146,7 +146,7 @@
 }
 
 .logo{
-  width: 170px;
+  width: 50px;
   height: 50px;
   display: -webkit-flex;
   display: -moz-flex;
@@ -157,15 +157,22 @@
   -ms-align-items: center;
   align-items: center;
   margin-right: 20px;
-  border: 1px solid #FF8100;
+  /*border: 1px solid #FF8100;*/
   text-decoration: none;
   cursor: pointer;
   color: #fff;
+  	-webkit-transition: 0.5s;
+  	-o-transition: 0.5s;
+  	transition: 0.5s;
 }
 .logo > img{
-	width: 100%;
 	height: 100%;
 }
+.logo:hover{
+    -webkit-filter: drop-shadow(0 0 3px #FF8100);
+    filter: drop-shadow(0 0 3px #FF8100);
+}
+
 .nav{
   /*width: 170px;*/
   height: 100%;
@@ -338,8 +345,41 @@
 	-ms-align-items: center;
 	align-items: center;
 }
-.foot-nav > ul{
-	list-style: none;
+.fmidle {
+    width: 70%;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    flex-direction: column;
+    -ms-align-items: center;
+    align-items: center;
+}
+.fright {
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    flex-direction: column;
+    -ms-align-items: center;
+    align-items: center;
+}
+.market {
+    width: 100%;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    flex-direction: column;
+    -ms-align-items: center;
+    align-items: center;
+    justify-content: space-between;
+}
+.foot-nav > ul {
+    list-style: none;
 }
 .foot-nav > ul > li a{
 	display: block;
@@ -357,11 +397,19 @@
 	text-align: center;
 	margin: 5px 0;
 }
-.social{
-	margin-bottom: 20px;
+.social {
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    justify-content: space-around;
+    -ms-align-items: center;
+    align-items: center;
 }
 .social > i{
 	font-size: 30px;
+    margin: 5px;
   	color: #004B65;
 }
 
@@ -379,7 +427,7 @@
 		font-size: 14px;
 	}
 	.logo{
-		width: 150px;
+		width: 50px;
 		margin-right: 10px;
 	}
 	.nav > ul > li a{
@@ -407,10 +455,11 @@
 	.mob-header > i.fa-bars{
 		display: block;
 	}
-	.logo{
-		height: 40px;
-		margin: 7px 0;
-	}
+    .logo {
+        width: 40px;
+        height: 40px;
+        margin: 7px 0;
+    }
 	.fmidle{
 		margin-left: 5px;
 	}
@@ -446,4 +495,7 @@
 @media  (max-width: 375px){
 }
 @media  (max-width: 320px){
+    .foot-nav{
+        display: none;
+    }
 }
