--- a/SqApp/wwwroot/css/regist.css
+++ b/SqApp/wwwroot/css/regist.css
@@ -62,7 +62,7 @@
 	border: 1px solid #90A8D1;
 }
 .vhod > input:focus{
-	outline: 2px solid #e9da11;
+	outline: 2px solid #FF3D28;
 }
 .vhod > button{
 	background-color: #118CE9;
