--- a/SqApp/wwwroot/css/admin.css
+++ b/SqApp/wwwroot/css/admin.css
@@ -23,12 +23,12 @@ content .tovar{
 content .tovar > img{
   width: 100%;
   height: 150px;
-  background-color: #FF8100;
+  background-color: #FF3D28;
   font-size: 50px;
 }
 content .tovar > h3{
   font-size: 20px;
-  color: #004B65;
+  color: #555;
   margin: 15px 0;
   /*text-align: center;*/
 }
@@ -49,7 +49,7 @@ content .tovar:hover{
   box-shadow: 0 1px 15px #90A8D1;
 }
 content .tovar:hover > h3{
-  color: #FF8100;
+  color: #FF3D28;
 }
 
 content > .lists {
@@ -72,7 +72,7 @@ content > .lists {
 }
 .lists > table th{
   font-weight: bold;
-  color: #083E68;
+  color: #555;
 }
 .lists > table td, .lists > table th{
   padding: 5px 15px;
