--- a/SqApp/wwwroot/css/edit.css
+++ b/SqApp/wwwroot/css/edit.css
@@ -39,18 +39,18 @@ a.shop {
 }
 
     .search:hover {
-        border-color: #004B65;
+        border-color: #118CE9;
     }
 
     .search:focus, .sect-search > button:focus {
         outline: none;
-        border-color: #004B65;
+        border-color: #118CE9;
     }
 
 .sect-search > button {
     height: 100%;
     padding: 10px;
-    background-color: #004B65;
+    background-color: #118CE9;
     border: none;
     position: absolute;
     top: 0;
@@ -328,7 +328,7 @@ i.fa-search {
 
     .section > .submit {
         width: 75%;
-        background-color: #004B65;
+        background-color: #118CE9;
         color: #fff;
         text-decoration: none;
         text-align: center;
@@ -343,7 +343,7 @@ i.fa-search {
     height: 20px;
     position: absolute;
     z-index: 1005;
-    border: 2px solid #004B65;
+    border: 2px solid #118CE9;
     border-radius: 25%;
     top: 6px;
     right: 6px;
@@ -352,7 +352,7 @@ i.fa-search {
 }
 
     .close-mod:hover {
-        box-shadow: 0 0 10px #004B65;
+        box-shadow: 0 0 10px #118CE9;
     }
 
     .close-mod span {
@@ -367,7 +367,7 @@ i.fa-search {
             height: 2px;
             display: block;
             content: '';
-            background-color: #004B65;
+            background-color: #118CE9;
             position: absolute;
             top: 50%;
             left: 50%;
@@ -387,7 +387,7 @@ i.fa-search {
 
 .tov-btn {
     /*width: 50%;*/
-    background-color: #004B65;
+    background-color: #118CE9;
     color: #fff;
     cursor: pointer;
     text-decoration: none;
@@ -405,7 +405,7 @@ i.fa-search {
     height: 20px;
     position: absolute;
     z-index: 1005;
-    border: 2px solid #004B65;
+    border: 2px solid #118CE9;
     border-radius: 25%;
     top: 6px;
     right: 6px;
@@ -414,7 +414,7 @@ i.fa-search {
 }
 
     .close-mod1:hover {
-        box-shadow: 0 0 10px #004B65;
+        box-shadow: 0 0 10px #118CE9;
     }
 
     .close-mod1 span {
@@ -429,7 +429,7 @@ i.fa-search {
             height: 2px;
             display: block;
             content: '';
-            background-color: #004B65;
+            background-color: #118CE9;
             position: absolute;
             top: 50%;
             left: 50%;
@@ -482,12 +482,12 @@ i.fa-search {
     position: relative;
     font-weight: bold;
     top: 1px;
-    color: #004B65;
+    color: #555;
     cursor: pointer;
 }
 
 .tab-active {
-    background-color: #004B65;
+    background-color: #118CE9;
     color: #fff;
     font-weight: normal;
 }
