--- a/SqApp/wwwroot/css/user.css
+++ b/SqApp/wwwroot/css/user.css
@@ -57,7 +57,7 @@
 	border: 1px solid #90A8D1;
 }
 .vhod > input:focus{
-	outline: 2px solid #e9da11;
+	outline: 2px solid #FF3D28;
 }
 .vhod > button{
 	background-color: #118CE9;
@@ -79,7 +79,7 @@
 	border-color: transparent;
 }
 .vhod > button:focus{
-	border: 2px solid #e9da11;
+	border: 2px solid #FF3D28;
 	border-radius: 0;
 	outline: none;
 }
