--- a/SqApp/Views/Home/Index.cshtml
+++ b/SqApp/Views/Home/Index.cshtml
@@ -97,48 +97,49 @@
         <div class="sect2-bottom">
             <a href="#!">
                 <img src="~/images/avia.png" />
-                <h3>Оптовый товары из Китая</h3>
+                <h3>Оптовые товары из Китая</h3>
             </a>
             <a href="#!">
                 <img src="~/images/transport.png" />
-                <h3>Оптовый товары из Китая</h3>
+                <h3>Оптовые товары из Китая</h3>
             </a>
             <a href="#!">
                 <img src="~/images/mors.png" />
-                <h3>Оптовый товары из Китая</h3>
+                <h3>Оптовые товары из Китая</h3>
             </a>
             <a href="#!">
                 <img src="~/images/ekonom.png" />
-                <h3>Оптовый товары из Китая</h3>
+                <h3>Оптовые товары из Китая</h3>
             </a>
         </div>
     </div>
     <div class="sect3">
-        <h3 class="sect3-h">Интернет магазин SQ Express</h3>
+        <h3 class="sect3-h">Магазин SQ Express</h3>
+        <p>Выбор лучшей цены, одобрение кредита онлайн.</p>
         <div class="sect3-cont">
             <a href="#!">
-                <img src="https://kaspi.kz/reswp/img/start/shop/headphones.png" alt="">
-                <p>Наушники</p>
+                <img src="~/images/f1.png"/>
+                <p>Телефоны, <br />Гаджеты</p>
             </a>
             <a href="#!">
-                <img src="https://kaspi.kz/reswp/img/start/shop/wristwatches.png" alt="">
-                <p>Часы</p>
+                <img src="~/images/f2.png" />
+                <p>Автотовары</p>
             </a>
             <a href="#!">
-                <img src="https://kaspi.kz/reswp/img/start/shop/headphones.png" alt="">
-                <p>Наушники</p>
+                <img src="~/images/f3.png" />
+                <p>Украшения, <br />Аксессуары</p>
             </a>
             <a href="#!">
-                <img src="https://kaspi.kz/reswp/img/start/shop/wristwatches.png" alt="">
-                <p>Часы</p>
+                <img src="~/images/f4.png" />
+                <p>Компьютеры</p>
             </a>
             <a href="#!">
-                <img src="https://kaspi.kz/reswp/img/start/shop/headphones.png" alt="">
-                <p>Наушники</p>
+                <img src="~/images/f5.png" />
+                <p>ТВ, Аудио <br />Видео</p>
             </a>
             <a href="#!">
-                <img src="https://kaspi.kz/reswp/img/start/shop/wristwatches.png" alt="">
-                <p>Часы</p>
+                <img src="~/images/f6.png" />
+                <p>Товары для дома и дачи</p>
             </a>
         </div>
     </div>
