--- a/SqApp/wwwroot/css/admin.css
+++ b/SqApp/wwwroot/css/admin.css
@@ -2,7 +2,8 @@
 
 .main > content { /*----------------------CONTENT-------------------*/
     width: 100%;
-    padding: 50px 8%;
+    padding-top: 50px;
+    padding-bottom: 50px;
     justify-content: space-between;
     outline: 1px solid;
 }
