--- a/SqApp/wwwroot/css/shop.css
+++ b/SqApp/wwwroot/css/shop.css
@@ -78,6 +78,7 @@ i.fa-search {
     padding: 0 6%;
     border: 1px solid #CBD6E8;
     border-right: none;
+    border-left: none;
 }
 
 .sect-nav > ul {
@@ -133,10 +134,20 @@ i.fa-search {
 
 .baner { /*---------------BANER-------------*/
     width: 100%;
-    height: 350px;
+    /*height: 350px;*/
     background-color: #90A8D1;
+    position: absolute;
+    left: 0;
+    right: 0;
 }
-
+#ban-slider {
+    width: 100%;
+    height: 100%;
+}
+#ban-slider img{
+    width: 100%;
+    /*height: 100px !important;*/
+}
 
 .tovars { /*---------------TOVARS-------------*/
     width: 70%;
@@ -154,7 +165,9 @@ i.fa-search {
     margin-top: 40px;
     margin-bottom: 40px;
 }
-
+.nedavno {
+    margin-top: 38%;
+}
 .responsive {
     width: 100%;
     border: 1px solid #118CE9;
@@ -242,6 +255,9 @@ a.tovar-name:focus, a.tov-img:focus {
 
     .tovars {
         width: 80%;
+    }
+    .nedavno {
+        margin-top: 33%;
     }
 }
 
