--- a/SqApp/Views/Shared/_Layout.cshtml
+++ b/SqApp/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                 <i class="fa fa-bars"></i>
                 <div class="left">
                     @*<a href="~/Home/Index" class="logo">SQ Express</a>*@
-                    <a href="~/Home/Index" class="logo"><img src="~/images/logo.png" alt="Alternate Text" /></a>
+                    <a href="~/Home/Index" class="logo"><img src="~/images/logo.png"/> Sqexpress.kz</a>
                 </div>
                 <div class="right">
                     <a href="~/Account/Login" class="user"><i class="fa fa-user"></i></a>
