--- a/SqApp/Views/Store/Shop.cshtml
+++ b/SqApp/Views/Store/Shop.cshtml
@@ -2,8 +2,8 @@
 
 <link rel="stylesheet" href="~/css/shop.css">
 <link rel="stylesheet" href="~/css/slider.css">
-<link rel="stylesheet" type="text/css" href="~/slick/slick.css" />
-<link rel="stylesheet" type="text/css" href="~/slick/slick-theme.css" />
+<link rel="stylesheet" type="text/css" href="~/log-slick/slick.css" />
+<link rel="stylesheet" type="text/css" href="~/log-slick/slick-theme.css" />
 
 
 <content>
@@ -30,33 +30,8 @@
         </ul>
     </div>
     <div class="baner">
-        <div class="slider ban-slider">
-            <div class="slItems">
-                <div class="slItem">
-                    <p>TEXT 1</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, doloribus.</p>
-                </div>
-                <div class="slItem">
-                    <p>TEXT 2</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, doloribus.</p>
-                </div>
-                <div class="slItem">
-                    <p>TEXT 3</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, doloribus.</p>
-                </div>
-                <div class="slItem">
-                    <p>TEXT 4</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, doloribus.</p>
-                </div>
-                <div class="slItem">
-                    <p>TEXT 5</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, doloribus.</p>
-                </div>
-                <div class="slItem">
-                    <p>TEXT 6</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, doloribus.</p>
-                </div>
-            </div>
+        <div class="slider" id="ban-slider">
+            <img src="~/images/shop-banner.png" />
         </div>
     </div>
 
@@ -97,8 +72,19 @@
 
 <script src="~/js/slider.min.js"></script>
 <script type="text/javascript" src="~/slick/slick.min.js"></script>
+
 <script type="text/javascript">
     $(document).ready(function () {
+         $('#ban-slider').slick({
+            dots: false,
+            arrows: true,
+            infinite: true,
+            speed: 100,
+            fade: true,
+            autoplay: true,
+            autoplaySpeed: 5000,
+            cssEase: 'linear'
+        });
         $('.responsive').slick({
             dots: false,
             infinite: false,
