--- a/SqApp/Views/Home/Uslugi.cshtml
+++ b/SqApp/Views/Home/Uslugi.cshtml
@@ -10,7 +10,7 @@
         <div class="sect-text">
             <h2>Авиа доставка</h2>
             <p>Услуга «сборные грузы из Китая» подходит для участников малого и среднего бизнеса, — одним словом, для тех, кто не готов ждать пока соберется целый контейнер. В таких случаях, используя автотранспорт, можно добиться минимизации сроков и стоимости доставки, так как несколько клиентов берут на себя аренду контейнера или фуры.</p>
-            <a href="~/Home/Dostavka" class="more">Подробнее</a>
+            <a href="~/Logistika/Air" class="more">Подробнее</a>
         </div>
     </div>
     <div class="sect-cont">
@@ -18,7 +18,7 @@
         <div class="sect-text">
             <h2>Автодоставка</h2>
             <p>Услуга «сборные грузы из Китая» подходит для участников малого и среднего бизнеса, — одним словом, для тех, кто не готов ждать пока соберется целый контейнер. В таких случаях, используя автотранспорт, можно добиться минимизации сроков и стоимости доставки, так как несколько клиентов берут на себя аренду контейнера или фуры.</p>
-            <a href="~/Home/Dostavka" class="more">Подробнее</a>
+            <a href="~/Logistika/Avto" class="more">Подробнее</a>
         </div>
     </div>
     <div class="sect-cont">
@@ -26,7 +26,7 @@
         <div class="sect-text">
             <h2>Морская доставка</h2>
             <p>Доставка целых контейнеров из любого порта в Китае на условиях FOB и EXW. Мы предложим вам лучший маршрут исходя из вашего бюджета. Таможенное оформление и подготовку разрешительных документов мы берем на себя. Контейнерные перевозки из Китая в Россию — это надежно и выгодно для вас.</p>
-            <a href="~/Home/Dostavka" class="more">Подробнее</a>
+            <a href="~/Logistika/More" class="more">Подробнее</a>
         </div>
     </div>
     <div class="sect-cont">
@@ -34,7 +34,7 @@
         <div class="sect-text">
             <h2>Эконом-доставка из Китая</h2>
             <p>Доставка сборным контейнером идеально подходит для товаров, которые могут быть привезены с учетом длительного планирования, пробных закупок, тяжелых и недорогих, а также хрупких товаров, требующих бережной транспортировки. Данный способ доставки является лучшим вариантом отправки груза, не поместившегося в целый контейнер.</p>
-            <a href="~/Home/Dostavka" class="more">Подробнее</a>
+            <a href="~/Logistika/Cheap" class="more">Подробнее</a>
         </div>
     </div>
 </content>
