--- a/SqApp/Views/Home/Logistika.cshtml
+++ b/SqApp/Views/Home/Logistika.cshtml
@@ -11,22 +11,22 @@
             <p>Все услуги сервиса делятся на четыре основных подразделения (кликните на интересующий вас раздел). Добро пожаловать в Китай!</p>
         </div>
         <div class="sect2-cont">
-            <a href="#!">
+            <a href="~/Logistika/Air">
                 <img src="~/images/avia.png" />
                 <h3>Авиа доставка из Китая от 30кг</h3>
                 <p>Быстрые решения для вашего бизнеса</p>
             </a>
-            <a href="#!">
+            <a href="~/Logistika/Avto">
                 <img src="~/images/transport.png" />
                 <h3>Автодоставка из Китая от 100кг</h3>
                 <p>Сборные фуры к вашим услугам</p>
             </a>
-            <a href="#!">
+            <a href="~/Logistika/More">
                 <img src="~/images/mors.png" />
                 <h3>Морская доставка из Китая от 300кг</h3>
                 <p>Оптимальный способ доставки крупных грузов</p>
             </a>
-            <a href="#!">
+            <a href="~/Logistika/Cheap">
                 <img src="~/images/ekonom.png" />
                 <h3>Эконом- доставка из Китая от 150кг</h3>
                 <p>Экономичный способ доставки из Китая</p>
