--- a/SqApp/wwwroot/css/dostavka.css
+++ b/SqApp/wwwroot/css/dostavka.css
@@ -1,14 +1,16 @@
-@import url("const.css");
+@import url("constlog.css");
 
 
 /*-------------------CONTENT-------------------------------------*/
 
-.main > content{
-	width: 100%;
-	/*padding: 50px;*/
-	position: relative;
-	background-color: #FAFAFA;
-	position: relative;
+.main > content {
+    width: 100%;
+    /*padding: 50px;*/
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+    position: relative;
+    background-color: #FAFAFA;
+    position: relative;
 }
 .accordeon {
 	width: 300px;
@@ -471,9 +473,12 @@ p.tar-dos{
 }
 
 @media  (max-width: 1024px){
-	.nav > ul > li a{
-		margin: 0 10px;
-	}
+    .accordeon{
+        /*padding-left: 60px;*/
+    }
+    .nav > ul > li a {
+        margin: 0 10px;
+    }
 	.cont-text{
 		padding-left: 25px;
 		padding-top: 25px;
