--- a/SqApp/Views/Logistika/Rail.cshtml
+++ b/SqApp/Views/Logistika/Rail.cshtml
@@ -50,7 +50,7 @@
                 <h2>Железнодорожная доставка</h2>
                 <p>Услуга «сборные грузы из Китая» подходит для участников малого и среднего бизнеса — одним словом, для тех, кто не готов ждать, пока соберется целый контейнер. В таких случаях, используя автотранспорт, можно добиться минимизации сроков и стоимости доставки, так как несколько клиентов берут на себя аренду контейнера или фуры в складчину.</p>
             </div>
-            @*<img src="http://www.transitplus.ru/img/service/head/sbornie.png" alt="">*@
+            <img src="http://www.transitplus.ru/img/service/head/sbornie.png" alt="">
         </div>
         <form class="form">
             <input type="text" placeholder="Имя" required>
